add: rabbitmq config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,12 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/service_db
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=pst21
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+#rabbitmq amqp
+
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
