--- a/notification-app/src/main/resources/application.properties
+++ b/notification-app/src/main/resources/application.properties
@@ -4,4 +4,6 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 rabbitmq.queue.proposta.pendente=proposta-pendente.ms-notificacao
+aws.accessKey=${ACCESS_KEY:}
+aws.secretKey=${SECRET_KEY:}
 
