--- a/proposta-app/src/main/resources/application.properties
+++ b/proposta-app/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.rabbitmq.password=guest
 #Rabbitmq properties
 
 rabbitmq.propostapendente.exchange=proposta-pendente.ex
+rabbitmq.propostaconcluida.exchange=proposta-concluida.ex
