--- a/analise-credito/src/main/resources/application.properties
+++ b/analise-credito/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 rabbitmq.queue.proposta-pendente=proposta-pendente.ms-analise-credito
+
+app.pontuacao.minima=200
+
+app.messages.exceptions.calculo=não foi possível realizar o cálculo
