--- a/analise-credito/src/main/resources/application.properties
+++ b/analise-credito/src/main/resources/application.properties
@@ -4,7 +4,10 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 rabbitmq.queue.proposta-pendente=proposta-pendente.ms-analise-credito
+rabbitmq.exchange.proposta.concluida=proposta-concluida.ex
+
 
 app.pontuacao.minima=200
-
 app.messages.exceptions.calculo=não foi possível realizar o cálculo
+app.messages.exceptions.nome-sujo=O usuário possui pendências
+app.messages.exceptions.score-baixo=O usuário possui pendências
