refact: ajuste properties

--- a/proposta-app/src/main/resources/application.properties
+++ b/proposta-app/src/main/resources/application.properties
@@ -13,6 +13,9 @@ spring.rabbitmq.password=guest
 
 #Rabbitmq properties
 
-rabbitmq.propostapendente.exchange=proposta-pendente.ex
-rabbitmq.propostaconcluida.exchange=proposta-concluida.ex
-rabbitmq.queue.proposta-concluida=proposta-concluida.ms-proposta
+rabbitmq.proposta-pendente.exchange=proposta-pendente.ex
+rabbitmq.queue.proposta-concluida.exchange=proposta-concluida.ex
+rabbitmq.queue.proposta-pendente-ms-analise-credito=proposta-pendente.ms-analise-credito
+rabbitmq.queue.proposta-pendente-ms-notificacao=proposta-pendente.ms-notificacao
+rabbitmq.queue.proposta-concluida-ms-proposta=proposta-concluida.ms-proposta
+rabbitmq.queue.proposta-concluida-ms-notificacao=proposta-concluida.ms-notificacao
