--- a/analise-credito/src/main/resources/application.properties
+++ b/analise-credito/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
-rabbitmq.queue.proposta-pendente=proposta-pendente.ms-analise-credito
+
+rabbitmq.queue.proposta-pendente-ms-analise-credito=proposta-pendente.ms-analise-credito
 rabbitmq.exchange.proposta.concluida=proposta-concluida.ex
 
-
-app.pontuacao.minima=200
+analise.pontuacao-minima=200
