--- a/notification-app/src/main/resources/application.properties
+++ b/notification-app/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 rabbitmq.queue.proposta.pendente-ms-notificacao=proposta-pendente.ms-notificacao
+rabbitmq.queue.proposta.concluida-ms-notificacao=proposta-concluida.ms-notificacao
 aws.accessKey=${ACCESS_KEY:}
 aws.secretKey=${SECRET_KEY:}
 
