add: configuracao dlq p/ propostaPendente queue

--- a/analise-credito/src/main/resources/application.properties
+++ b/analise-credito/src/main/resources/application.properties
@@ -4,7 +4,12 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
+spring.rabbitmq.listener.simple.retry.enable=true
+spring.rabbitmq.listener.simple.retry.max-attemps=2
+
 rabbitmq.queue.proposta-pendente-ms-analise-credito=proposta-pendente.ms-analise-credito
 rabbitmq.exchange.proposta.concluida=proposta-concluida.ex
 
 analise.pontuacao-minima=200
+
+
