--- a/proposta-app/src/main/resources/application.properties
+++ b/proposta-app/src/main/resources/application.properties
@@ -20,3 +20,7 @@ rabbitmq.queue.proposta-pendente-ms-analise-credito=proposta-pendente.ms-analise
 rabbitmq.queue.proposta-pendente-ms-notificacao=proposta-pendente.ms-notificacao
 rabbitmq.queue.proposta-concluida-ms-proposta=proposta-concluida.ms-proposta
 rabbitmq.queue.proposta-concluida-ms-notificacao=proposta-concluida.ms-notificacao
+
+rabbitmq.exchange.proposta-pendente-dlx.ex=proposta-pendente-dlx.ex
+
+rabbitmq.queue.proposta-pendente.dlq=proposta-pendente.dlq
