--- a/proposta-app/src/main/resources/application.properties
+++ b/proposta-app/src/main/resources/application.properties
@@ -22,5 +22,8 @@ rabbitmq.queue.proposta-concluida-ms-proposta=proposta-concluida.ms-proposta
 rabbitmq.queue.proposta-concluida-ms-notificacao=proposta-concluida.ms-notificacao
 
 rabbitmq.exchange.proposta-pendente-dlx.ex=proposta-pendente-dlx.ex
+rabbitmq.exchange.proposta-concluida-dlx.ex=proposta-concluida-dlx.ex
+
 
 rabbitmq.queue.proposta-pendente.dlq=proposta-pendente.dlq
+rabbitmq.queue.proposta-concluida.dlq=proposta-concluida.dlq
